WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276820
[Viewer Mode] Can't exit PiP after switching tabs in viewer mode
https://bugs.webkit.org/show_bug.cgi?id=276820
Summary
[Viewer Mode] Can't exit PiP after switching tabs in viewer mode
Jer Noble
Reported
2024-07-19 10:03:49 PDT
[Viewer Mode] Can't exit PiP after switching tabs in viewer mode
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-07-19 10:03:57 PDT
<
rdar://problem/131791367
>
Jer Noble
Comment 2
2024-07-19 10:06:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31005
EWS
Comment 3
2024-07-19 13:28:05 PDT
Committed
281145@main
(b425c69887c7): <
https://commits.webkit.org/281145@main
> Reviewed commits have been landed. Closing PR #31005 and removing active labels.
EWS
Comment 4
2024-07-22 21:40:19 PDT
Committed
280938.96@safari-7619-branch
(97ae9c8533bb): <
https://commits.webkit.org/280938.96@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1459 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug