Cherry-pick b425c69887c7. rdar://131791367

[Viewer Mode] Can't exit PiP after switching tabs in viewer mode
    https://bugs.webkit.org/show_bug.cgi?id=276820
    rdar://131791367

    Reviewed by Andy Estes and Eric Carlson.

    Returning to InWindowFullscreen mode goes through the "Element Fullscreen" path,
    which fails if there's no user gesture activation. Ensure a user gesture is present
    when a command from the UI Process requests a specific fullscreen mode.

    * Source/WebCore/platform/cocoa/VideoPresentationModelVideoElement.mm:
    (WebCore::VideoPresentationModelVideoElement::requestFullscreenMode):

    Canonical link: https://commits.webkit.org/281145@main

Canonical link: https://commits.webkit.org/280938.96@safari-7619-branch